--- a/MyGamingListTemplate.html
+++ b/MyGamingListTemplate.html
@@ -3,7 +3,9 @@
         <meta charset = "utf-8">
         <title>MyGamingList Template</title>
         <meta name = 'viewport' content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" type="text/css" href="styles.css">
+        
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet">
         <!-- Latest compiled and minified CSS -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
 
@@ -12,24 +14,84 @@
 
         <!-- Latest compiled JavaScript -->
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+        <link rel="stylesheet" type="text/css" href="styles.css">
     </head>
     <body>
         <nav class = 'navbar navbar-inverse'>
             <div class = 'container-fluid'>
                 <div class='navbar-header'>
                     <button type='button' class = 'navbar-toggle' data-toggle='collapse'
-                    data-target='#MyNavbar'>
+                    data-target='#myNavbar'>
                         <span class='icon-bar'></span>
                         <span class='icon-bar'></span>
                         <span class='icon-bar'></span> 
                     </button>
-                    <a href="#" class='navbar-brand'><img src="img" alt=""></a>
-                    <h1 class = 'headerTitle'>MyGamingList</h1>
-                    <button type = "button" class = 'headerButtons'>Sign up</button>
-                    <button type = "button" class = 'headerButtons'>Login</button>
+                    <a href="#" class='navbar-brand'><img src="img/logo3.png" alt="" id='logo'> MyGamingList</a>
+                    <!--<button type = "button" class = 'headerButtons'>Sign up</button>
+                    <button type = "button" class = 'headerButtons'>Login</button>!-->
+                </div>
+                <div class='collapse navbar-collapse' id='myNavbar'>
+                    <ul class='nav navbar-nav navbar-right'>
+                        <li class='active'><a href="#">Home </a></li>
+                        <li><a href="#">About</a></li>
+                        <li><a href="#">Services</a></li>
+                        <li><a href="#">Testimonials</a></li>
+                        <li><a href="#">Contact</a></li>
+                    </ul>
                 </div>
             </div>
         </nav>
+        <div id='myCarousel' class='carousel slide' data-ride='carousel'>
+            <ol class='carousel-indicators'>
+                <li data-target='#myCarousel' data-slide-to='0' class='active'></li>
+                <li data-target='#myCarousel' data-slide-to='1' class='active'></li>
+                <li data-target='#myCarousel' data-slide-to='2' class='active'></li>
+            </ol>
+            <div class='carousel-inner' role='listbox'>
+                <div class='item active'>
+                    <img src="img/p5.png" alt="">
+                    <div class='carousel-caption'>
+                        <h1 id="slider-caption">Get to know Persona 5</h1>
+                        <br>
+                        <button type='button' class='btn btn-default'>Get me in!</button>
+                    </div><!--End caption-->
+                </div><!--End active-->
+                <div class="item">
+                    <img src="img/sbu.png" alt="">
+                </div>
+                <div class="item">
+                        <img src="img/kh3.png" alt="">
+                </div>
+            </div>
+            <!--Start slider controls-->
+            <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+                <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+            </a>
+            <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+                <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+             </a>
+        </div> <!--End of the slider-->
+
+        <div class="container text-center">
+            <h2>Top games of the month!</h2>
+            <div class="row">
+                <div class="col-sm-4">
+                    <img src="img/p5logo.png" id="icon">
+                    <h4>Persona 5</h4>
+                </div>
+                <div class="col-sm-4">
+                        <img src="img/sbulogo.png" id="icon">
+                        <h4>Super Smash Bros. Ultimate</h4>
+                </div>
+                <div class="col-sm-4">
+                    <img src="img/kh3logo.png" id="icon">
+                    <h4>Kingdom Hearts 3</h4>
+                </div>
+            </div>
+        </div>
+
         <div class = 'loginForm'>
             <div class = 'box'>
                 <h1 class = 'file'>Login_View</h1>
